fixed horizontal scroll on lighting page

--- a/src/scss/components/_about-head.scss
+++ b/src/scss/components/_about-head.scss
@@ -1,17 +1,19 @@
 // THESE ARE GLOBAL FOR THE WHOLE PAGE
-.content {
-  margin: 0 auto;
-  max-width: 576px;
-  padding: 0 4rem;
+.about {
+  .content {
+    margin: 0 auto;
+    max-width: 576px;
+    padding: 0 4rem;
 
-  //SMALL BREAKPOINTS
-  @include respond-to('small') {
-    max-width: 767px;
-    padding: 0;
-  }
-  @include respond-to('large') {
-    max-width: 992px;
-    padding: 0;
+    //SMALL BREAKPOINTS
+    @include respond-to('small') {
+      max-width: 767px;
+      padding: 0;
+    }
+    @include respond-to('large') {
+      max-width: 992px;
+      padding: 0;
+    }
   }
 }
 
