--- a/src/scss/components/_lighting-hero.scss
+++ b/src/scss/components/_lighting-hero.scss
@@ -1,4 +1,5 @@
 .lighting-hero {
+  max-width: 375px;
   display: flex;
   justify-content: center;
   text-align: center;
